// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a small sized variant of the component 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 500;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  padding: 0 0.5rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
}

<div
  class="Card EntryCard EntryCard--size-small Card--padding-none"
  data-test-id="cf-ui-entry-card"
>
  <div
    class="EntryCard__wrapper"
  >
    <div
      class="EntryCard__header"
    >
      <div
        class="EntryCard__content-type"
        data-test-id="content-type"
      >
        My Content Type
      </div>
      <div
        class="emotion-0"
        data-test-id="cf-ui-tag"
      >
        published
      </div>
    </div>
    <div
      class="EntryCard__content"
    >
      <div
        class="EntryCard__body"
      >
        <h1
          class="EntryCard__title"
          data-test-id="title"
          title=""
        >
          My Entry Card
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 500;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  padding: 0 0.5rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
}

<div
  class="Card EntryCard EntryCard--size-default Card--padding-none"
  data-test-id="cf-ui-entry-card"
>
  <div
    class="EntryCard__wrapper"
  >
    <div
      class="EntryCard__header"
    >
      <div
        class="EntryCard__content-type"
        data-test-id="content-type"
      >
        My Content Type
      </div>
      <div
        class="emotion-0"
        data-test-id="cf-ui-tag"
      >
        published
      </div>
    </div>
    <div
      class="EntryCard__content"
    >
      <div
        class="EntryCard__body"
      >
        <h1
          class="EntryCard__title"
          data-test-id="title"
          title=""
        >
          My Entry Card
        </h1>
        <p
          class="EntryCard__description"
        >
          This is my Entry Card
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with a custom drag handle 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 500;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  padding: 0 0.5rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
}

<div
  class="Card EntryCard EntryCard--size-default Card--padding-none"
  data-test-id="cf-ui-entry-card"
>
  <div
    class="CardDragHandle"
    data-test-id="cf-ui-card-drag-handle"
  >
    <svg
      class="Icon Icon--small Icon--muted"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
    <span
      class="CardDragHandle__sr-label"
    >
      Reorder card
    </span>
  </div>
  <div
    class="EntryCard__wrapper"
  >
    <div
      class="EntryCard__header"
    >
      <div
        class="EntryCard__content-type"
        data-test-id="content-type"
      >
        My Content Type
      </div>
      <div
        class="emotion-0"
        data-test-id="cf-ui-tag"
      >
        published
      </div>
    </div>
    <div
      class="EntryCard__content"
    >
      <div
        class="EntryCard__body"
      >
        <h1
          class="EntryCard__title"
          data-test-id="title"
          title=""
        >
          My Entry Card
        </h1>
        <p
          class="EntryCard__description"
        >
          This is my Entry Card
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with a drag handle 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 500;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  padding: 0 0.5rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
}

<div
  class="Card EntryCard EntryCard--size-default Card--padding-none"
  data-test-id="cf-ui-entry-card"
>
  <div
    class="CardDragHandle"
    data-test-id="cf-ui-card-drag-handle"
  >
    <svg
      class="Icon Icon--small Icon--muted"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
    <span
      class="CardDragHandle__sr-label"
    >
      Reorder entry
    </span>
  </div>
  <div
    class="EntryCard__wrapper"
  >
    <div
      class="EntryCard__header"
    >
      <div
        class="EntryCard__content-type"
        data-test-id="content-type"
      >
        My Content Type
      </div>
      <div
        class="emotion-0"
        data-test-id="cf-ui-tag"
      >
        published
      </div>
    </div>
    <div
      class="EntryCard__content"
    >
      <div
        class="EntryCard__body"
      >
        <h1
          class="EntryCard__title"
          data-test-id="title"
          title=""
        >
          My Entry Card
        </h1>
        <p
          class="EntryCard__description"
        >
          This is my Entry Card
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with a thumbnail element 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 500;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  padding: 0 0.5rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
}

<div
  class="Card EntryCard EntryCard--size-default Card--padding-none"
  data-test-id="cf-ui-entry-card"
>
  <div
    class="EntryCard__wrapper"
  >
    <div
      class="EntryCard__header"
    >
      <div
        class="EntryCard__content-type"
        data-test-id="content-type"
      >
        My Content Type
      </div>
      <div
        class="emotion-0"
        data-test-id="cf-ui-tag"
      >
        published
      </div>
    </div>
    <div
      class="EntryCard__content"
    >
      <div
        class="EntryCard__body"
      >
        <h1
          class="EntryCard__title"
          data-test-id="title"
          title=""
        >
          My Entry Card
        </h1>
        <p
          class="EntryCard__description"
        >
          This is my Entry Card
        </p>
      </div>
      <figure
        class="EntryCard__thumbnail"
      >
        <img
          alt="Joy Division - Closer album cover"
          src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAASABIAAD/4QCMRXhpZgAATU0AKgAAAAgABQESAAMAAAABAAEAAAEaAAUAAAABAAAASgEbAAUAAAABAAAAUgEoAAMAAAABAAIAAIdpAAQAAAABAAAAWgAAAAAAAABIAAAAAQAAAEgAAAABAAOgAQADAAAAAQABAACgAgAEAAAAAQAAAEagAwAEAAAAAQAAAEYAAAAA/+0AOFBob3Rvc2hvcCAzLjAAOEJJTQQEAAAAAAAAOEJJTQQlAAAAAAAQ1B2M2Y8AsgTpgAmY7PhCfv/AABEIAEYARgMBIgACEQEDEQH/xAAfAAABBQEBAQEBAQAAAAAAAAAAAQIDBAUGBwgJCgv/xAC1EAACAQMDAgQDBQUEBAAAAX0BAgMABBEFEiExQQYTUWEHInEUMoGRoQgjQrHBFVLR8CQzYnKCCQoWFxgZGiUmJygpKjQ1Njc4OTpDREVGR0hJSlNUVVZXWFlaY2RlZmdoaWpzdHV2d3h5eoOEhYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4eLj5OXm5+jp6vHy8/T19vf4+fr/xAAfAQADAQEBAQEBAQEBAAAAAAAAAQIDBAUGBwgJCgv/xAC1EQACAQIEBAMEBwUEBAABAncAAQIDEQQFITEGEkFRB2FxEyIygQgUQpGhscEJIzNS8BVictEKFiQ04SXxFxgZGiYnKCkqNTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4eXqCg4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2dri4+Tl5ufo6ery8/T19vf4+fr/2wBDAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx7/2wBDAQUFBQcGBw4ICA4eFBEUHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh7/3QAEAAX/2gAMAwEAAhEDEQA/APsWeWRZo4o41ZnVmyzYAxj2PrRuuv8AnjD/AN/T/wDE02X/AJCEH/XOT+a1YoAh3XX/ADxh/wC/p/8AiaN11/zxh/7+n/4mpqhu7qG1jDzMVDNtHGeev9DQAbrr/njD/wB/T/8AE0brr/njD/39P/xNUJfEGlRb99wcKpYkRseACSRxz0NaiMroHU5VhkGgCLddf88Yf+/p/wDiaTddf88Yf+/p/wDianooAitpTLGWZQrBmUgHPQ4qWq9h/qpP+u0n/oRqxQB//9D7Dl/5CEH/AFzk/mtWKry/8hCD/rnJ/Na8E+Ofx9174f8AxIfwnpfhfTtTRbCK786e7eJvm8zIwqMMDy+vvQB9B0hAIwQCPevjVf2yfEJUEeCdFwRkf8TCb/41Sj9sjxF/0JOi/wDgxm/+NUAfZGxP7o/KnDivjb/hsfxD/wBCTov/AIMZv/jVKP2x/EHfwTow/wC4jN/8aoA+yKK+NT+2R4hzgeCtFP8A3EZv/jVe6fs3fFS/+K3h7VtTv9ItdMewvVtlS3naUODEsm7LKD/FjGO1AHp1h/qpP+u0n/oRqxVew/1Un/XaT/0I1YoA/9H7Dl/5CEH/AFzk/mtfEP7ZNybX9oCdwobzNHsYm5xhTLKW/QEfjX29L/yEIP8ArnJ/Na+F/wBt7d/wvSfaMt/ZFlt+u6fFAGBb+ALTxrrWl61pRaz0q8ZTqccbIHgX5iZY2kwh3YCbT91ueRnHn2rabanVbgaNbXwss7oUuWSSZVPQO0fyk/T9a63TPGFroumWWjy/aZ7S3aEmGH5AzRsG3O2RuJYdDng9Mdca01+/tbZtSgcRDdKJJFUhZBuz82Bzgcfh60CuYD6dcxvse0lDYzgqc4pj2cyj5oHH1WvpK3+H/j7UtJ0+/k8P+HtOa/gWVLO41Tyrt8gHcFCHZgHPLdwGAzxy3ii2ax1i50jxFoy6ZqMUSk2zRDODnbJkMQ4ODgqcEg9wQADxCK3LLK2z7o/Gvs79gJQvgfxSB0/teP8A9JYa+VtREMWovCoUdiB34xmvqz9gb/kSPFPtrEY/K0hoBM+i7D/VSf8AXaT/ANCNWKr2H+qk/wCu0n/oRqxQM//S+w5f+QhB/wBc5P5rXwv+26SPjtMVxkaTZEZ9mnr7ol/5CEH/AFzk/mtePfGD9nzRviR4zfxPfeJNU06ZrWK2MNtFCybYyxB+dSc/OaAPhi6fTXmWG3uLiWF875LkBfK54ZcD654/nXX2mhW2uado0Q8T27wRCKPUbSCV7qVOhIihijyRw3DEEZHXBr6G/wCGPvDPOPG2vjPX/R7b/wCIq5afspaXZwGC0+I3imCEnJjjS3VeuegT1oFY8tM/xF1T4u2viiLQNQjsobt7a2eeaGJBaFyu7DvuBK7GYbeqgYNegeMPD0PjTxBFfazpNxJc2Vg8FoZZ/Lh3KQ68qwIQsCGG5gQRxW6P2YNNwA3j7X2IAAJsrInA6DJizU9r+zTYW77o/H/iFT7Wdj/8ZoCx8p+NfDl/e+K5r3SbbS0sEXyke1uFWIlGKsNuSwbcGB6g7c5Ga+mP2DIpoPB3iyK4jaKUayhZGIJGbWE9iR+tXLz9l3Srq6a4fx54g3sxP/HracZOcf6qvRfgr8MLD4YaVqdhYaveamNQuhcySXMcaMrCNUwBGoGMKO1AzuLD/VSf9dpP/QjViq9h/qpP+u0n/oRqxQB//9P7GngSVlYs6suQCjleD16fQUz7Kv8Az2uP+/pqxRQBX+yr/wA9rj/v6aPsq/8APa4/7+mrFFAFf7Kv/Pa4/wC/po+yr/z2uP8Av6asUUAV/sq/89rj/v6aPsq/89rj/v6asUUARwRLDHsTdjJPJySScnmpKKKAP//Z"
        />
      </figure>
    </div>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 500;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  padding: 0 0.5rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
}

<div
  class="Card EntryCard EntryCard--size-default my-extra-class Card--padding-none"
  data-test-id="cf-ui-entry-card"
>
  <div
    class="EntryCard__wrapper"
  >
    <div
      class="EntryCard__header"
    >
      <div
        class="EntryCard__content-type"
        data-test-id="content-type"
      >
        My Content Type
      </div>
      <div
        class="emotion-0"
        data-test-id="cf-ui-tag"
      >
        published
      </div>
    </div>
    <div
      class="EntryCard__content"
    >
      <div
        class="EntryCard__body"
      >
        <h1
          class="EntryCard__title"
          data-test-id="title"
          title=""
        >
          My Entry Card
        </h1>
        <p
          class="EntryCard__description"
        >
          This is my Entry Card
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with dropdownListElements 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 500;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  padding: 0 0.5rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
}

<div
  class="Card EntryCard EntryCard--size-default Card--padding-none"
  data-test-id="cf-ui-entry-card"
>
  <div
    class="EntryCard__wrapper"
  >
    <div
      class="EntryCard__header"
    >
      <div
        class="EntryCard__content-type"
        data-test-id="content-type"
      >
        My Content Type
      </div>
      <div
        class="emotion-0"
        data-test-id="cf-ui-tag"
      >
        published
      </div>
      <div
        class="Dropdown EntryCard__actions"
        data-test-id="cf-ui-card-actions"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="IconButton IconButton--secondary"
          data-test-id="cf-ui-icon-button"
          type="button"
        >
          <span
            class="TabFocusTrap IconButton__inner"
            tabindex="-1"
          >
            <svg
              class="Icon Icon--small Icon--primary IconButton__icon"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
            <span
              class="IconButton__label"
            >
              Actions
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="EntryCard__content"
    >
      <div
        class="EntryCard__body"
      >
        <h1
          class="EntryCard__title"
          data-test-id="title"
          title=""
        >
          My Entry Card
        </h1>
        <p
          class="EntryCard__description"
        >
          This is my Entry Card
        </p>
      </div>
    </div>
  </div>
</div>
`;
